# brazilian-reits

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  create_deployment.py  my_gh_workflow.py  prefect.yaml  pyproject.toml
.github/workflows/: lint-python.yml  prefect-auth.yml  prefect-deploy.yml
.prefect/: flows.json
flows/: healthcheck.py  hello_world.py  prefect-docker-guide-flow.py
flows/brazilian-reits/: brazilian_reits_flow.py
flows/brazilian_reits/: brazilian_reits.py  brazilian_reits_flow.py  requirements.txt  utils.py
flows/flow-1/: requirements.txt
flows/flow-2/: healthcheck_copy.py  requirements.txt
flows/trigger-dbt/: requirements.txt  trigger_dbt_flow.py
queries/: .user.yml  dbt_project.yml  profiles.yml
queries/models/brazilian_reits/: ativo_passivo.sql  complemento.sql  geral.sql  schema.yml
terraform/: .terraform.lock.hcl  main.tf  variables.tf
