[tool.poetry]
name = "prefect-cloud-run-poc"
version = "0.1.0"
description = ""
authors = ["Arthur Gusmão <arthurgusmao@id.uff.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.16.4"
prefect-gcp = "^0.5.7"
gcsfs = "^2024.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
