[tool.poetry]
name = "prefect-cloud-run-poc"
version = "0.1.0"
description = ""
authors = ["Arthur Gusmão <arthurgusmao@id.uff.br>"]
readme = "README.md"

[tool.poetry.dependencies]
gcsfs = "^2024.3.1"
prefect = "^2.16.8"
prefect-gcp = "^0.5.7"
dbt-bigquery = "^1.7.7"
prefect-dbt = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
